[Backport] Fixes a rare bug where sometimes if the spawn location is in a world other than world,nether,end then a ConfigurationSerialization gets thrown on startup of the plugin.
This happens because that world may not be loaded when World1-6Essentials is starting. Which causes an error as Location object requires the World object.

https://github.com/World1-6/World1-6Essentials/commit/06c5690869a7d2df84e589c9111f17313548dfe3