@@ -5,6 +5,7 @@ import com.andrew121410.mc.world16essentials.config.CustomConfigManager;
 import com.andrew121410.mc.world16essentials.utils.API;
 import com.andrew121410.mc.world16utils.chat.Translate;
 import com.andrew121410.mc.world16utils.config.CustomYmlManager;
+import com.andrew121410.mc.world16utils.config.UnlinkedWorldLocation;
 import org.bukkit.Location;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
@@ -33,15 +34,22 @@ public class SpawnCMD implements CommandExecutor {
             return true;
         }
 
-        Location spawn = this.api.getLocationFromFile(this.shitYml, "Spawn.default");
+        UnlinkedWorldLocation spawn = this.api.getLocationFromFile(this.shitYml, "Spawn.default");
         if (spawn == null) {
-            Location defaultSpawn = this.plugin.getServer().getWorlds().get(0).getSpawnLocation();
-            this.api.setLocationToFile(this.shitYml, "Spawn.default", defaultSpawn);
-            spawn = defaultSpawn;
+            Location defaultSpawn = this.plugin.getServer().getWorlds().getFirst().getSpawnLocation();
+            UnlinkedWorldLocation unlinkedWorldLocation = new UnlinkedWorldLocation(defaultSpawn);
+            this.api.setLocationToFile(this.shitYml, "Spawn.default", unlinkedWorldLocation);
+            spawn = unlinkedWorldLocation;
         }
 
         if (!player.hasPermission("world16.spawn")) {
             api.sendPermissionErrorMessage(player);
+            return true;
+        }
+
+        if (!spawn.isWorldLoaded()) {
+            player.sendMessage(Translate.miniMessage("<red>The spawn location is not loaded."));
+            player.sendMessage(Translate.miniMessage("<yellow>This happens if the world is not loaded."));
             return true;
         }
 
